alterações: redução para apenas uma página - tudo no README

--- a/README.org
+++ b/README.org
@@ -1,7 +1,5 @@
 
-# Table of Contents
-
-
+#+title: Resumos das aulas de física
 
 Nessa página serão resumidas as aulas de física dos Cúrsos Técnicos de Nível
 Médio em Informática, Administração e Agropecuária na Forma Integrada,
@@ -11,4 +9,3 @@ O objetivo é construir um material de consulta aos estudantes ao
 logo dos desenvolvimentos das disciplinias. 
 
 Sugestões dos alunos serão sempre bem-vindas.
-
