--- a/README.org
+++ b/README.org
@@ -9,3 +9,41 @@ O objetivo é construir um material de consulta aos estudantes ao
 logo dos desenvolvimentos das disciplinias. 
 
 Sugestões dos alunos serão sempre bem-vindas.
+
+
+* Pré-física
+** Algumas dicas de como estudar
+- Método Feyman
+  - Baseia-se no fato de que ensinar é uma das melhores formas de
+  aprender.
+  - [[https://conexao.pucminas.br/blog/dicas/tecnica-feynman/#:~:text=A%20T%C3%A9cnica%20Feynman%20%C3%A9%20um,estivesse%20conversando%20com%20uma%20crian%C3%A7a.][método Feynman de estudo - blog PUC Minas]]
+- Repetição espaçada
+  Baseada no conceito de Curva do Esquecimento.
+  - [[https://blog.duolingo.com/pt/repeticao-espacada-no-aprendizado/][Repetição espaçada no aprendizado - log duolingo]]
+- Técnica do Pomodoro
+  - Nosso cérebro tem limite de tempo de concentração, e precisa de
+  pequenos intervalos de descanço.
+  - [[https://brasilescola.uol.com.br/dicas-de-estudo/tecnica-pomodoro-que-e-e-como-funciona.htm][Técnica Pomodoro - Brasil Escola Uol]]
+
+
+** Grandezas e Unidades de medida
+
+** Equações
+
+** Gráficos
+
+* Física I
+
+** Mecânica
+
+** Mecânica dos fluidos
+
+* Física II
+
+* Física III
+
+* Referências
+
+- HEWITT, Paul G. Física conceitual. Bookman Editora, 2023.
+  
+- ALVARENGA, Beatriz; MÁXIMO, Antônio. Física ensino médio. São Paulo: Editora Scipione, 2006.
